# aplookup-rs

./: Cargo.toml  README.md
.github/workflows/: on-release.yml  rust-clippy.yml
src/: curl.rs  main.rs
